--- a/dougnlamb.budget/dougnlamb.budget.csproj
+++ b/dougnlamb.budget/dougnlamb.budget.csproj
@@ -42,15 +42,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="budget\IAccount.cs" />
+    <Compile Include="budget\IAllocation.cs" />
     <Compile Include="budget\IBudget.cs" />
     <Compile Include="budget\IBudgetItem.cs" />
     <Compile Include="budget\IBudgetPeriod.cs" />
+    <Compile Include="budget\ICurrency.cs" />
     <Compile Include="budget\IFund.cs" />
+    <Compile Include="budget\IMoney.cs" />
+    <Compile Include="budget\IUserAccess.cs" />
     <Compile Include="core\collections\AllItemsList.cs" />
     <Compile Include="core\collections\IPagedList.cs" />
     <Compile Include="budget\ITransaction.cs" />
     <Compile Include="budget\IUser.cs" />
     <Compile Include="core\collections\PagedList.cs" />
+    <Compile Include="core\IBaseObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="core\collections\TestPagedList.cs" />
   </ItemGroup>
