--- a/UnitTestProject1/test.budget.csproj
+++ b/UnitTestProject1/test.budget.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="budget\UserTest.cs" />
     <Compile Include="core\collections\PagedListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
