--- a/dougnlamb.budget/dougnlamb.budget.csproj
+++ b/dougnlamb.budget/dougnlamb.budget.csproj
@@ -45,6 +45,12 @@
     <Compile Include="budget\AccountEditorModel.cs" />
     <Compile Include="budget\Budget.cs" />
     <Compile Include="budget\BudgetEditorModel.cs" />
+    <Compile Include="budget\dao\BudgetDao.cs" />
+    <Compile Include="budget\dao\IBudgetDao.cs" />
+    <Compile Include="budget\dao\IAccountDao.cs" />
+    <Compile Include="budget\dao\AccountDao.cs" />
+    <Compile Include="budget\dao\MockDatabase.cs" />
+    <Compile Include="budget\dao\UserDao.cs" />
     <Compile Include="budget\IAccount.cs" />
     <Compile Include="budget\IAccountEditorModel.cs" />
     <Compile Include="budget\IAllocation.cs" />
@@ -60,6 +66,7 @@
     <Compile Include="budget\ITransactionEditorModel.cs" />
     <Compile Include="budget\IUser.cs" />
     <Compile Include="budget\IUserAccess.cs" />
+    <Compile Include="budget\dao\IUserDao.cs" />
     <Compile Include="budget\IUserEditorModel.cs" />
     <Compile Include="budget\User.cs" />
     <Compile Include="budget\UserEditorModel.cs" />
@@ -68,15 +75,14 @@
     <Compile Include="budget\ITransaction.cs" />
     <Compile Include="core\collections\PagedList.cs" />
     <Compile Include="core\IBaseObject.cs" />
+    <Compile Include="core\security\ISecurityContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="core\collections\TestPagedList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="BudgetDiagram.cd" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="core\security\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
