--- a/UnitTestProject1/test.budget.csproj
+++ b/UnitTestProject1/test.budget.csproj
@@ -54,6 +54,7 @@
     <Compile Include="budget\BudgetTest.cs" />
     <Compile Include="budget\AccountTest.cs" />
     <Compile Include="budget\UserTest.cs" />
+    <Compile Include="core\collections\IObservableList.cs" />
     <Compile Include="core\collections\PagedListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
