Adding more dao and editors and view models

--- a/dougnlamb.budget/dougnlamb.budget.csproj
+++ b/dougnlamb.budget/dougnlamb.budget.csproj
@@ -42,6 +42,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="budget\Account.cs" />
+    <Compile Include="budget\Currency.cs" />
+    <Compile Include="budget\dao\CurrencyDao.cs" />
+    <Compile Include="budget\dao\ICurrencyDao.cs" />
+    <Compile Include="budget\dao\ITransactionDao.cs" />
+    <Compile Include="budget\models\IUserRegistrationModel.cs" />
+    <Compile Include="budget\models\MoneyEditorModel.cs" />
+    <Compile Include="budget\models\UserRegistrationModel.cs" />
+    <Compile Include="budget\models\TransactionEditorModel.cs" />
+    <Compile Include="budget\Money.cs" />
+    <Compile Include="budget\Transaction.cs" />
+    <Compile Include="budget\dao\TransactionDao.cs" />
+    <Compile Include="budget\UserRegistration.cs" />
     <Compile Include="budget\models\AccountEditorModel.cs" />
     <Compile Include="budget\Budget.cs" />
     <Compile Include="budget\models\BudgetEditorModel.cs" />
@@ -52,10 +64,16 @@
     <Compile Include="budget\dao\MockDatabase.cs" />
     <Compile Include="budget\dao\UserDao.cs" />
     <Compile Include="budget\IAccount.cs" />
+    <Compile Include="budget\models\CurrencySelectionModel.cs" />
+    <Compile Include="budget\models\CurrencyViewModel.cs" />
+    <Compile Include="budget\models\IAccountViewModel.cs" />
     <Compile Include="budget\models\IAccountEditorModel.cs" />
     <Compile Include="budget\IAllocation.cs" />
+    <Compile Include="budget\models\IAllocationViewModel.cs" />
     <Compile Include="budget\models\IAllocationEditorModel.cs" />
     <Compile Include="budget\IBudget.cs" />
+    <Compile Include="budget\models\IBudgetItemViewModel.cs" />
+    <Compile Include="budget\models\IBudgetViewModel.cs" />
     <Compile Include="budget\models\IBudgetEditorModel.cs" />
     <Compile Include="budget\IBudgetItem.cs" />
     <Compile Include="budget\models\IBudgetItemEditorModel.cs" />
@@ -63,13 +81,22 @@
     <Compile Include="budget\ICurrency.cs" />
     <Compile Include="budget\IFund.cs" />
     <Compile Include="budget\IMoney.cs" />
+    <Compile Include="budget\models\IBudgetPeriodViewModel.cs" />
+    <Compile Include="budget\models\ICurrencySelectionModel.cs" />
+    <Compile Include="budget\models\IMoneyViewModel.cs" />
+    <Compile Include="budget\models\IMoneyEditorModel.cs" />
+    <Compile Include="budget\models\ITransactionViewModel.cs" />
     <Compile Include="budget\models\ITransactionEditorModel.cs" />
     <Compile Include="budget\IUser.cs" />
     <Compile Include="budget\IUserAccess.cs" />
     <Compile Include="budget\dao\IUserDao.cs" />
+    <Compile Include="budget\models\ICurrencyViewModel.cs" />
+    <Compile Include="budget\models\IUserViewModel.cs" />
     <Compile Include="budget\models\IUserEditorModel.cs" />
     <Compile Include="budget\User.cs" />
     <Compile Include="budget\models\UserEditorModel.cs" />
+    <Compile Include="budget\models\UserViewModel.cs" />
+    <Compile Include="budget\IUserRegistration.cs" />
     <Compile Include="core\collections\AllItemsList.cs" />
     <Compile Include="core\collections\IPagedList.cs" />
     <Compile Include="budget\ITransaction.cs" />
