--- a/dougnlamb.budget/dougnlamb.budget.csproj
+++ b/dougnlamb.budget/dougnlamb.budget.csproj
@@ -42,18 +42,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="budget\Account.cs" />
+    <Compile Include="budget\BudgetItem.cs" />
+    <Compile Include="budget\models\BudgetItemEditorModel.cs" />
+    <Compile Include="budget\models\BudgetItemViewModel.cs" />
     <Compile Include="budget\Currency.cs" />
+    <Compile Include="budget\dao\BudgetItemDao.cs" />
     <Compile Include="budget\dao\CurrencyDao.cs" />
     <Compile Include="budget\dao\ICurrencyDao.cs" />
     <Compile Include="budget\dao\ITransactionDao.cs" />
+    <Compile Include="budget\dao\IBudgetItemDao.cs" />
+    <Compile Include="budget\models\AccountViewModel.cs" />
     <Compile Include="budget\models\AllocationEditorModel.cs" />
     <Compile Include="budget\models\AccountSelectionModel.cs" />
+    <Compile Include="budget\models\BudgetItemSelectionModel.cs" />
     <Compile Include="budget\models\ITransactionSelectionModel.cs" />
     <Compile Include="budget\models\IBudgetItemSelectionModel.cs" />
     <Compile Include="budget\models\IAccountSelectionModel.cs" />
     <Compile Include="budget\models\IUserRegistrationModel.cs" />
+    <Compile Include="budget\models\MoneyViewModel.cs" />
     <Compile Include="budget\models\MoneyEditorModel.cs" />
     <Compile Include="budget\models\QuickTransactionReportModel.cs" />
+    <Compile Include="budget\models\TransactionViewModel.cs" />
     <Compile Include="budget\models\UserRegistrationModel.cs" />
     <Compile Include="budget\models\TransactionEditorModel.cs" />
     <Compile Include="budget\Money.cs" />
@@ -103,6 +112,7 @@
     <Compile Include="budget\models\UserEditorModel.cs" />
     <Compile Include="budget\models\UserViewModel.cs" />
     <Compile Include="budget\IUserRegistration.cs" />
+    <Compile Include="core\BaseObject.cs" />
     <Compile Include="core\collections\AllItemsList.cs" />
     <Compile Include="core\collections\IPagedList.cs" />
     <Compile Include="budget\ITransaction.cs" />
