--- a/dougnlamb.budget/dougnlamb.budget.csproj
+++ b/dougnlamb.budget/dougnlamb.budget.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="budget\Account.cs" />
+    <Compile Include="budget\Allocation.cs" />
     <Compile Include="budget\BudgetItem.cs" />
+    <Compile Include="budget\dao\AllocationDao.cs" />
+    <Compile Include="budget\dao\IAllocationDao.cs" />
     <Compile Include="budget\models\TransactionSelectionModel.cs" />
     <Compile Include="budget\models\BudgetViewModel.cs" />
     <Compile Include="budget\models\BudgetItemEditorModel.cs" />
