--- a/UnitTestProject1/test.budget.csproj
+++ b/UnitTestProject1/test.budget.csproj
@@ -66,7 +66,9 @@
       <Name>dougnlamb.budget</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
