--- a/dougnlamb.budget.mvc/dougnlamb.budget.mvc.csproj
+++ b/dougnlamb.budget.mvc/dougnlamb.budget.mvc.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Shared\EditorTemplates\MoneyEditorModel.cshtml" />
     <Content Include="Views\Transaction\Create.cshtml" />
     <Content Include="Views\Account\View.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\MoneyViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
